# voice-pro

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements-voice-cpu.txt  requirements-voice-gpu.txt
backend/: .env.example  Dockerfile  README.md  main.py  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_epic3_user_auth.py  003_epic4_credit_transactions.py  004_epic6_stripe_billing.py  005_epic7_user_soft_delete.py  006_epic7_fk_on_delete.py
backend/app/: celery_app.py  config.py  errors.py  redis_client.py
backend/app/api/: auth.py  billing.py  health.py  jobs.py  users.py
backend/app/db/: models.py  session.py
backend/app/middleware/: rate_limit.py
backend/app/schemas/: auth.py  jobs.py  users.py
backend/app/security/: passwords.py  tokens.py
backend/app/services/: account_deletion.py  auth_bootstrap.py  credit_metering.py  google_oauth.py  job_account_guard.py  stripe_billing.py  subscription_util.py
backend/app/tasks/: credits_reset.py  ping.py  synthesize.py  transcribe.py
backend/app/utils/: __init__.py  sync_timeout.py
backend/app/voice_engine/: __init__.py  stt.py  translate.py  tts.py
backend/tests/: conftest.py  test_account_deletion.py  test_auth.py  test_credit_metering.py  test_epic6_billing.py  test_epic7_fk_strategy.py  test_rate_limit_fail_open.py  test_smoke.py  test_voice_engine.py
dashboard/: index.html  package-lock.json  package.json  tsconfig.json
docs/: DEV-START.md  (+2 more)
(+29 files in other folders)
