[project]
name = "voice-pro-backend"
version = "0.1.0"
description = "Voice-Pro SaaS API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg2-binary>=2.9.10",
  "redis>=5.2.1",
  "celery>=5.4.0",
  "pydantic-settings>=2.7.0",
  "email-validator>=2.2.0",
  "sentry-sdk[fastapi]>=2.19.2",
  "python-multipart>=0.0.20",
  "pyjwt>=2.10.1",
  "bcrypt>=4.2.1",
  "httpx>=0.28.1",
  "faster-whisper>=1.1.0",
  "deep-translator>=1.11.4",
  "edge-tts>=7.0.0",
  "stripe>=11.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
